@@ -1,12 +1,10 @@
 package com.apicatalog.cli.mixin;
 
 import java.io.PrintWriter;
-import java.util.Collections;
+import java.util.Map;
 
 import jakarta.json.Json;
 import jakarta.json.JsonStructure;
-import jakarta.json.JsonWriter;
-import jakarta.json.JsonWriterFactory;
 import jakarta.json.stream.JsonGenerator;
 import picocli.CommandLine.Option;
 
@@ -21,12 +19,12 @@ public class JsonOutput {
             return;
         }
 
-        final JsonWriterFactory writerFactory = Json
-                .createWriterFactory(Collections.singletonMap(JsonGenerator.PRETTY_PRINTING, true));
+        final var writerFactory = Json.createWriterFactory(Map.of(JsonGenerator.PRETTY_PRINTING, true));
 
-        try (final JsonWriter jsonWriter = writerFactory.createWriter(writer)) {
+        try (final var jsonWriter = writerFactory.createWriter(writer)) {
             jsonWriter.write(document);
         }
+        writer.println();
         writer.flush();
     }
 }
